--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -124,7 +124,7 @@ p.deskripsi-teks {
     position: absolute;
     margin: -21px;
     width: 10px;
-    min-height: 140px;
+    min-height: 86px;
     background-color: #3B8C91;
     border-radius: 1rem 0 0 1rem;
 }
@@ -139,7 +139,7 @@ p.deskripsi-teks {
 }
 
 .card.proyek {
-    min-height: 140px;
+    min-height: 86px !important;
     box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.05);
     border-radius: 1rem;
 }
@@ -303,3 +303,66 @@ input.input-register::placeholder {
 .keahlian div {
     margin: 8px
 }
+
+
+/* proyek aksi */
+
+.project-action{
+    margin-left: 360px;
+}
+
+.setujui-proyek{
+
+}
+
+.tombol-update-progress{
+   
+        text-decoration: none;
+        background: #3B8C91;
+        padding: 10px 20px;
+        border-radius: 12px;
+        color: white;
+        font-size: 14px;
+        border: none;
+        letter-spacing: 0.045em;
+        box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.15);
+        border-radius: 24px;
+        border: none;
+        margin-left: 10px;
+    
+}
+
+.setujui-proyek form input{
+    margin: 20px 0px;
+}
+
+.button-setuju{
+    text-decoration: none;
+    background: #3B8C91;
+    padding: 10px 20px;
+    border-radius: 12px;
+    color: white;
+    font-size: 18px;
+    border: none;
+    letter-spacing: 0.045em;
+    box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.15);
+    border-radius: 24px;
+    border: none;
+}
+
+
+.button-tolak{
+    text-decoration: none;
+    background: white;
+    padding: 10px 20px;
+    border-radius: 12px;
+    color: #3B8C91;
+    font-size: 18px;
+    border: none;
+    letter-spacing: 0.045em;
+    box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.15);
+    border-radius: 24px;
+    border: none;
+}
+
+
