--- a/views/detailProyekDesaDikerjakan.ejs
+++ b/views/detailProyekDesaDikerjakan.ejs
@@ -10,12 +10,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
-<body>
+<body>  
 
-
+            
+    <form action="/selesaiProyek" method="POST">
+        <input type="text" name="id" id="" value='<%=result.id_proyek%>'>
+        <input class="button-selesai" value="Proyek Selesai" type="submit">
+    </form> 
 
     <% if(user.nama_desa == null) {%>
     
+
         <button class="hubungi-investor"> <img width="22px" src="img/chatIcon.png" alt=""> Hubungi Desa</button>
         <%- include('sideBarInvestor'); -%>
         
@@ -139,11 +144,18 @@
                                 <input type="submit" value="Submit Progress" style="border-radius:8px;background: #3B8C91;" class="btn btn-primary">
                             </div>
                         </form>
+
+                      
+
                     </div>
                 </div>
             </div>
         </div>
 
+ 
+
+        <br>
+        <br>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
