--- a/views/detailProyekDesaMenunggu.ejs
+++ b/views/detailProyekDesaMenunggu.ejs
@@ -124,6 +124,7 @@
                 <h2 class="deskripsi-title" href="#">Tolak Proyek</h2>
                 <br>
                 <form action="/tolakProyek" method="POST">
+                    <input type="text" name="id" value="<%=result.id_proyek%>" style="display: none;">
                     <input class="button-tolak" type="submit" value="Tolak Proyek">
                 </form>
             </div>
