--- a/views/detailProyekInvestorMenunggu.ejs
+++ b/views/detailProyekInvestorMenunggu.ejs
@@ -14,12 +14,57 @@
 
 
     <% if(user.nama_desa == null) {%>
-    
-        <button class="hubungi-investor"> <img width="22px" src="img/chatIcon.png" alt=""> Hubungi Desa</button>
+        <button  data-toggle="modal" data-target="#exampleModal2" class="hubungi-investor"> <img width="22px" src="img/chatIcon.png" alt=""> Hubungi Desa</button>
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Kontak Desa</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p style="font-size:16px; color: #727272;">Kamu dapat menghubungi desa melalui email : </p>
+                                <p style="font-size: 20px;font-weight:bold">
+                                    <%=result.email%>
+                                </p>
+        
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         <%- include('sideBarInvestor'); -%>
         
     <%} else{ %>  
-        <button class="hubungi-investor"> <img width="22px" src="img/chatIcon.png" alt=""> Hubungi Investor</button>
+        <button  data-toggle="modal" data-target="#exampleModal2" class="hubungi-investor"> <img width="22px" src="img/chatIcon.png" alt=""> Hubungi Investor</button>
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Kontak Investor</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p style="font-size:16px; color: #727272;">Kamu dapat menghubungi investor melalui email : </p>
+                                <p style="font-size: 20px;font-weight:bold">
+                                    <%=result.email%>
+                                </p>
+        
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         <%- include('sideBarDesa'); -%>
      <% } %>
 
@@ -38,7 +83,7 @@
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="card proyek border-top-0 border-right-0 border-bottom-0">
-                                <div class="card-body desc-proyek">
+                                <div style="height: 86px;" class="card-body desc-proyek">
                                     <div class="left-green"></div>
                                     <div class="deadline">
                                         <% let days = result.waktu_target_selesai.toString().split(" ").slice(0, 4) %>
@@ -102,6 +147,9 @@
                 </div> -->
             </section>
         </div>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
