--- a/views/aboutDesa.ejs
+++ b/views/aboutDesa.ejs
@@ -59,10 +59,18 @@
 
 
                 <div style="bottom:5%" class="button-desa">
-                    <button style="margin-right: 8px;" target="_blank" class="portofolio-desa" href="user-uploads/pdf/<%=result.portofolio%>"> <img width="17px" src="img/portofolio.svg" alt=""> Portofolio Desa</button>
+                    <a style="margin-right: 8px;" target="_blank" class="portofolio-desa" href="user-uploads/pdf/<%=result.portofolio%>"> <img width="17px" src="img/portofolio.svg" alt=""> Portofolio Desa</a>
                     <button data-toggle="modal" data-target="#exampleModal2" class="hubungi-desa" href=""> <img width="17px" src="img/chatIcon.png" alt=""> Hubungi Desa</button>
                 </div>
                 <!-- Modal -->
+
+                <style>
+                    .portofolio-desa:hover{
+                        text-decoration: none;
+                    }
+
+
+                </style>
 
             </section>
 
