--- a/views/detailProyekDesaDikerjakan.ejs
+++ b/views/detailProyekDesaDikerjakan.ejs
@@ -14,7 +14,7 @@
 
             
     <form action="/selesaiProyek" method="POST">
-        <input type="text" name="id" id="" value='<%=result.id_proyek%>'>
+        <input style="display: none;" type="text" name="id" id="" value='<%=result.id_proyek%>'>
         <input class="button-selesai" value="Proyek Selesai" type="submit">
     </form> 
 
